public class RegularUser extends User {
    public RegularUser(String username, String password, String name) {
        super(username, password, name);
    }
}
